--- a/DOM/index.html
+++ b/DOM/index.html
@@ -1,27 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>DOM</title>
 </head>
+
 <body>
-    <h1 id="titulo">Estamos aprendiendo el DOM</h1>
+    <h1 id="titulo" class="miClase">Estamos aprendiendo el DOM</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic, ipsum ipsa neque at repudiandae, iusto officia et eos eligendi, modi eum? Rem eos similique cumque voluptate error harum blanditiis? Ipsum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic, ipsum ipsa neque at repudiandae, iusto officia et
+        eos eligendi, modi eum? Rem eos similique cumque voluptate error harum blanditiis? Ipsum.</p>
 
-    <p id="texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic, ipsum ipsa neque at repudiandae, iusto officia et eos eligendi, modi eum? Rem eos similique cumque voluptate error harum blanditiis? Ipsum.</p>
+    <p id="texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic, ipsum ipsa neque at repudiandae, iusto
+        officia et eos eligendi, modi eum? Rem eos similique cumque voluptate error harum blanditiis? Ipsum.</p>
 
-    <img id="foto" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/Canis_lupus_265b.jpg/800px-Canis_lupus_265b.jpg" alt="">
+    <img id="foto"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/Canis_lupus_265b.jpg/800px-Canis_lupus_265b.jpg"
+        alt="">
 
+    <ul>
+        <li class="miClase">Uno</li>
+        <li class="miClase">Dos</li>
+        <li class="miClase">Tres</li>
+    </ul>
+
+    <div>
+        <ul>
+            <li class="miClase">Uno</li>
+            <li class="miClase">Dos</li>
+            <li class="miClase">Tres</li>
+        </ul>
+    </div>
     <script>
-        const chTitle = document.getElementById('titulo');
-        chTitle.textContent= "Hola a todos";
+        //const chTitle = document.getElementById('titulo');
+        //chTitle.textContent= "Hola a todos";
 
-        const chParra = document.getElementById('texto');
-        chParra.textContent = "¿Como estan todos?";
+        //const chParra = document.getElementById('texto');
+        //chParra.textContent = "¿Como estan todos?";
 
-        let chImage = document.getElementById('foto');
-        chImage.src = "https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Front_view_of_a_resting_Canis_lupus_ssp.jpg/220px-Front_view_of_a_resting_Canis_lupus_ssp.jpg"
+        //let chImage = document.getElementById('foto');
+        //chImage.src = "https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Front_view_of_a_resting_Canis_lupus_ssp.jpg/220px-Front_view_of_a_resting_Canis_lupus_ssp.jpg"
+
+        //let col = document.getElementsByTagName("p");
+        //const miArray = [...col];
+
+        //console.log(miArray);
+
+        //for (let p of col) {console.log(p.textContent)}
+
+        //---------------------------------------
+
+        //const ul = document.getElementsByTagName("ul");
+        //const primerUl = ul[0];
+
+        //const segundoUl = document.getElementsByTagName("ul")[1];
+
+        //const misLi = primerUl.getElementsByClassName("miclase");
+
+        //console.log(misLi);
+
+        //---------------------------------------
+        // Primer elemento que encuentre
+        const parrafo = document.querySelector('p'); // getElementsByTagName
+        console.log(parrafo);
+        const foto = document.querySelector('#foto'); // getElementById
+        console.log(foto);
+        const clase = document.querySelector('div ul li.miClase'); // getElementsByClassName
+        console.log(clase);
 
     </script>
 </body>
+
 </html>
