--- a/DOM/index2.html
+++ b/DOM/index2.html
@@ -21,7 +21,7 @@
         <li>Zapallo</li>
     </ul>
 
-    <div>
+    <div id="div1">
         <ul>
             <li class="miClase">Uno</li>
             <li class="miClase">Dos</li>
@@ -34,7 +34,7 @@
     <input type="password" name="" id="password">
 
     <section>
-        <div>
+        <div id="div2">
             <p class="miClase">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <span>Hola a todos</span> Tenetur nisi dolorum reiciendis
                 harum, nulla ad soluta laborum animi vitae impedit,<strong style="display: none;">PALABRA SECRETA anunaki</strong> incidunt, voluptas quo aliquid omnis a ipsum libero
                 <script>console.log("Hola amigos")</script>cum alias.</p>
@@ -47,7 +47,7 @@
         </div>
     </section>
 
-    <script>
+    <script src="crearElementosHTML.js">
         
     </script>
 </body>
