--- a/DOM/index2.html
+++ b/DOM/index2.html
@@ -47,7 +47,7 @@
         </div>
     </section>
 
-    <script src="crearElementosHTML.js">
+    <script src="insertAdjacent.js">
         
     </script>
 </body>
