--- a/DOM/focusAndBlur.html
+++ b/DOM/focusAndBlur.html
@@ -11,7 +11,9 @@
     <h1>Focus and Blur</h1>
 
     <form action="" id="form">
-        <div><input type="text" name="" id="curso">Curso</input></div>
+        <div>
+            <input type="text" name="" id="curso">Curso</input>
+        </div>
         <div><input type="text" name="" id="duracion" onfocus="foco(this)">Duracion</input></div> // le estoy pasando el objeto mediante this, asi en la funcion puedo modificar el objeto sin problema
         <div><input type="checkbox" name="" id="chk">cambiar</div>
         <button type="submit">Enviar Formulario</button>
@@ -19,7 +21,10 @@
 
 
     <script>
+
         const input = document.querySelector('#curso');
+        const div = document.querySelector('div');
+        const form = document.querySelector('form');
 
         input.addEventListener('focus', (e) => {
             console.log(e)
