Promesa resolve, reject, then & catch

--- a/DOM/POO/codigoAsincrono/test.html
+++ b/DOM/POO/codigoAsincrono/test.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="callStack.js"></script>
+    <script src="promesas.js"></script>
 </body>
 </html>
