Use Strict-Buenas Practicas

--- a/DOM/POO/codigoAsincrono/test.html
+++ b/DOM/POO/codigoAsincrono/test.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Use Strict</title>
 </head>
 <body>
-    <script src="promesas.js"></script>
+    <h1>Use Strict</h1>
+
+    <p>Define que el codigo Javascript debe ejecutarse "en modo estricto"</p>
+
+    <script src="app.js"></script>
 </body>
 </html>
