--- a/DOM/POO/codigoAsincrono/test.html
+++ b/DOM/POO/codigoAsincrono/test.html
@@ -10,6 +10,6 @@
 
     <p>Define que el codigo Javascript debe ejecutarse "en modo estricto"</p>
 
-    <script src="app.js"></script>
+    <script src="patron-modulo.js"></script>
 </body>
 </html>
